--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@blocknote/core": "^0.37.0",
     "@blocknote/mantine": "^0.37.0",
     "@blocknote/react": "^0.37.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "react": "19.1.0",
