--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@assistant-ui/react": "^0.10.50",
+    "@assistant-ui/react-ui": "^0.1.8",
     "@blocknote/core": "^0.37.0",
     "@blocknote/mantine": "^0.37.0",
     "@blocknote/react": "^0.37.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@supabase/supabase-js": "^2.57.2",
+    "@tanstack/react-query": "^5.87.1",
+    "@types/uuid": "^10.0.0",
+    "assistant-ui": "^0.0.58",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "react": "19.1.0",
