feat(blog): integrate Supabase for blog posts and enhance UI components
- Migrate blog API routes from blogDb to Supabase client for better database integration
- Add auto-save functionality to Editor component with manual save button
- Enhance Blog component with icon/cover management, post deletion, and improved sidebar
- Replace Lucide React icons with React Icons across components for consistency
- Update blog store with CRUD operations for posts and comments
- Add environment configuration for Supabase service role key
- Improve chatbot streaming and UI responsiveness
- Update README with comprehensive project documentation and setup instructions

BREAKING CHANGE: Blog API endpoints now use Supabase instead of custom blogDb, requiring environment variable updates for TASKY_SUPABASE_* keys

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,12 @@ OPENROUTER_API_KEY="sk-or-your-actual-api-key-here"
 # This is the endpoint for the OpenRouter chat completions API.
 # It typically points to the v1 chat completions endpoint.
 OPENROUTER_API_URL="https://openrouter.ai/api/v1/chat/completions"
+
+# Supabase Configuration for Tasky features
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+TASKY_SUPABASE_SERVICE_ROLE_KEY=
+
+# Admin Credentials
+ADMIN_USERNAME=
+ADMIN_PASSWORD=
