--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@assistant-ui/react": "^0.10.50",
+    "@assistant-ui/react-markdown": "^0.10.0",
     "@assistant-ui/react-ui": "^0.1.8",
     "@blocknote/core": "^0.37.0",
     "@blocknote/mantine": "^0.37.0",
