--- a/package.json
+++ b/package.json
@@ -4,34 +4,47 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint",
+    "type-check": "tsc --noEmit",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "check-oauth": "node scripts/check-oauth-config.js"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^2.0.42",
+    "@ai-sdk/google": "^2.0.29",
+    "@ai-sdk/openai": "^2.0.64",
     "@assistant-ui/react": "^0.10.50",
     "@assistant-ui/react-markdown": "^0.10.0",
     "@assistant-ui/react-ui": "^0.1.8",
+    "@auth/prisma-adapter": "^2.11.1",
     "@blocknote/core": "^0.37.0",
     "@blocknote/mantine": "^0.37.0",
     "@blocknote/react": "^0.37.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
+    "@prisma/client": "^6.16.2",
     "@radix-ui/react-icons": "^1.3.2",
     "@supabase/supabase-js": "^2.57.2",
     "@tanstack/react-query": "^5.87.1",
     "@types/uuid": "^10.0.0",
+    "ai": "^3.4.33",
     "assistant-ui": "^0.0.58",
+    "axios": "^1.13.2",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
+    "next-auth": "^5.0.0-beta.30",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
@@ -58,6 +71,7 @@
     "@types/react-dom": "^18",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "jest": "^29.7.0",
