feat: add environment setup, ESLint configuration, README updates, and multiple components with test files

--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,111 @@
-# Google API Key (used to access Google APIs)
+# ===========================================
+# AI API Keys
+# ===========================================
+
+# Google API Key (for Gemini AI)
+# Get your key from: https://makersuite.google.com/app/apikey
 GOOGLE_API_KEY=your_google_api_key_here
 
-# Gemini API endpoint (example: for calling the Gemini generative AI model)
-GEMINI_API_URL=https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent
+# Gemini API endpoint
+GEMINI_API_URL=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent
 
-# OpenRouter API Key
-# This key is used to authenticate with the OpenRouter API for generating quizzes.
-# You can obtain your API key from your OpenRouter dashboard: https://openrouter.ai/settings
-OPENROUTER_API_KEY="sk-or-your-actual-api-key-here"
+# OpenRouter API Key (optional, for alternative AI models)
+# Get your key from: https://openrouter.ai/settings
+OPENROUTER_API_KEY=sk-or-your-actual-api-key-here
 
 # OpenRouter API URL
-# This is the endpoint for the OpenRouter chat completions API.
-# It typically points to the v1 chat completions endpoint.
-OPENROUTER_API_URL="https://openrouter.ai/api/v1/chat/completions"
+OPENROUTER_API_URL=https://openrouter.ai/api/v1/chat/completions
 
-# Supabase Configuration for Tasky features
-NEXT_PUBLIC_SUPABASE_URL=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
-TASKY_SUPABASE_SERVICE_ROLE_KEY=
+# Kilo API Key (optional)
+KILO_API_KEY=your_kilo_api_key_here
 
+# ===========================================
+# Supabase Configuration (AI Tasky)
+# ===========================================
+
+# Supabase Project URL
+# Get from: https://supabase.com/dashboard/project/_/settings/api
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+
+# Supabase Anon Key (public, safe to expose)
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
+
+# Supabase Service Role Key (secret, server-side only)
+TASKY_SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
+
+# Database URLs (for Prisma)
+DATABASE_URL=postgresql://postgres.your-project:password@aws-region.pooler.supabase.com:6543/postgres?pgbouncer=true
+DIRECT_URL=postgresql://postgres.your-project:password@aws-region.pooler.supabase.com:5432/postgres
+
+# ===========================================
+# Supabase Configuration (Blog - Optional)
+# ===========================================
+
+# Blog Supabase URL (if using separate instance)
+BLOG_SUPABASE_URL=https://your-blog-project.supabase.co
+
+# Blog Supabase Service Role Key
+BLOG_SUPABASE_SERVICE_ROLE_KEY=your_blog_service_role_key_here
+
+# ===========================================
+# Storage Configuration
+# ===========================================
+
+# Supabase Storage Bucket Name
+SUPABASE_STORAGE_BUCKET=Bucketname
+
+# Maximum file size (10MB in bytes)
+SUPABASE_STORAGE_MAX_FILE_SIZE=10485760
+
+# Allowed MIME types for uploads
+SUPABASE_STORAGE_ALLOWED_MIME_TYPES=image/jpeg,image/png,image/gif,image/webp
+
+# ===========================================
+# NextAuth Configuration
+# ===========================================
+
+# NextAuth URL (your app URL)
+NEXTAUTH_URL=http://localhost:3000
+
+# NextAuth Secret (generate with: openssl rand -base64 32)
+NEXTAUTH_SECRET=your_nextauth_secret_here
+
+# Google OAuth Credentials
+# Get from: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=your_google_client_id_here
+GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+
+# Auth Secret (for auth.js v5)
+AUTH_SECRET=your_auth_secret_here
+
+# ===========================================
+# Encryption
+# ===========================================
+
+# AI Encryption Key (for storing user API keys securely)
+# Generate with: openssl rand -hex 32
+AI_ENCRYPTION_KEY=your_encryption_key_here
+
+# ===========================================
 # Admin Credentials
-ADMIN_USERNAME=
-ADMIN_PASSWORD=
+# ===========================================
+
+ADMIN_USERNAME=username
+ADMIN_PASSWORD=your_secure_password_here
+
+# ===========================================
+# Analytics (Optional)
+# ===========================================
+
+# Google Analytics ID
+NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
+
+# ===========================================
+# Redis (Optional)
+# ===========================================
+
+# Upstash Redis URL
+UPSTASH_REDIS_REST_URL=https://your-redis.upstash.io
+
+# Upstash Redis Token
+UPSTASH_REDIS_REST_TOKEN=your_redis_token_here
