--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "type-check": "tsc --noEmit",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:ui": "vitest --ui",
     "check-oauth": "node scripts/check-oauth-config.js"
   },
   "dependencies": {
@@ -32,11 +33,13 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@supabase/supabase-js": "^2.57.2",
     "@tanstack/react-query": "^5.87.1",
+    "@types/jira-client": "^7.1.9",
     "@types/uuid": "^10.0.0",
     "ai": "^3.4.33",
     "assistant-ui": "^0.0.58",
     "axios": "^1.13.2",
     "gray-matter": "^4.0.3",
+    "jira-client": "^8.2.2",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-auth": "^5.0.0-beta.30",
@@ -65,23 +68,23 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^14.0.0",
-    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.0.0",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^30.1.2",
+    "jsdom": "^23.0.0",
     "prisma": "^6.16.1",
     "storybook": "^8.6.14",
     "tailwindcss": "^4",
-    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vitest": "^1.0.0",
+    "@vitest/ui": "^1.0.0"
   }
 }
