--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "cross-env NODE_OPTIONS='--max_old_space_size=6144' next build",
+    "build:analyze": "cross-env ANALYZE=1 NODE_OPTIONS='--max_old_space_size=6144' next build",
+    "build:fast": "cross-env NODE_OPTIONS='--max_old_space_size=6144' next build --experimental-build-mode=compile",
     "start": "next start",
     "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "type-check": "tsc --noEmit",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
@@ -31,7 +34,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@prisma/client": "^6.16.2",
     "@radix-ui/react-icons": "^1.3.2",
-    "@supabase/supabase-js": "^2.57.2",
+    "@supabase/supabase-js": "^2.81.1",
     "@tanstack/react-query": "^5.87.1",
     "@types/jira-client": "^7.1.9",
     "@types/uuid": "^10.0.0",
@@ -40,7 +43,7 @@
     "axios": "^1.13.2",
     "gray-matter": "^4.0.3",
     "jira-client": "^8.2.2",
-    "lucide-react": "^0.542.0",
+    "lucide-react": "^0.553.0",
     "next": "15.5.2",
     "next-auth": "^5.0.0-beta.30",
     "react": "18.3.1",
@@ -52,6 +55,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@next/bundle-analyzer": "^15.5.6",
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/addon-interactions": "^8.6.14",
     "@storybook/addon-links": "^8.6.14",
@@ -72,8 +76,10 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^4.0.0",
+    "@vitest/ui": "^1.0.0",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
@@ -84,7 +90,6 @@
     "ts-node": "^10.9.2",
     "typescript": "^5",
     "vite": "^5.0.0",
-    "vitest": "^1.0.0",
-    "@vitest/ui": "^1.0.0"
+    "vitest": "^1.0.0"
   }
 }
