--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "axios": "^1.13.2",
     "gray-matter": "^4.0.3",
     "jira-client": "^8.2.2",
+    "jira-md-sync": "^0.1.0",
+    "jira2md": "^3.0.1",
     "lucide-react": "^0.553.0",
     "next": "15.5.2",
     "next-auth": "^5.0.0-beta.30",
@@ -51,6 +53,7 @@
     "react-icons": "^5.5.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
+    "trello-md-sync": "^0.1.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
@@ -67,7 +70,6 @@
     "@storybook/react-vite": "^8.6.14",
     "@storybook/test": "^8.6.14",
     "@swc/core": "^1.13.5",
-
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^13.0.0",
