--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "next": "15.5.2",
     "next-auth": "^5.0.0-beta.30",
     "react": "18.3.1",
+    "react-diff-viewer-continued": "^3.4.0",
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
     "remark": "^15.0.1",
