--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-diff-viewer-continued": "^3.4.0",
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
+    "rehype-raw": "^7.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
     "trello-md-sync": "^0.1.0",
