--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tanstack/react-query": "^5.87.1",
     "@types/jira-client": "^7.1.9",
     "@types/uuid": "^10.0.0",
+    "@upstash/redis": "^1.35.7",
     "ai": "^3.4.33",
     "assistant-ui": "^0.0.58",
     "axios": "^1.13.2",
