--- a/package.json
+++ b/package.json
@@ -37,22 +37,24 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@supabase/supabase-js": "^2.81.1",
     "@tanstack/react-query": "^5.87.1",
+    "@types/bcrypt": "^6.0.0",
     "@types/jira-client": "^7.1.9",
     "@types/uuid": "^10.0.0",
     "@upstash/redis": "^1.35.7",
     "ai": "^3.4.33",
     "assistant-ui": "^0.0.58",
     "axios": "^1.13.2",
+    "bcrypt": "^6.0.0",
     "gray-matter": "^4.0.3",
     "jira-client": "^8.2.2",
     "jira-md-sync": "^0.1.0",
     "jira2md": "^3.0.1",
     "lucide-react": "^0.553.0",
-    "next": "15.5.2",
+    "next": "^16.0.8",
     "next-auth": "^5.0.0-beta.30",
-    "react": "18.3.1",
+    "react": "^19.2.1",
     "react-diff-viewer-continued": "^3.4.0",
-    "react-dom": "18.3.1",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "rehype-raw": "^7.0.0",
     "remark": "^15.0.1",
