--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "cross-env NODE_OPTIONS='--max_old_space_size=6144' next build",
+    "build": "cross-env NODE_OPTIONS='--max_old_space_size=6144' next build --no-lint",
     "build:analyze": "cross-env ANALYZE=1 NODE_OPTIONS='--max_old_space_size=6144' next build",
     "build:fast": "cross-env NODE_OPTIONS='--max_old_space_size=6144' next build --experimental-build-mode=compile",
     "start": "next start",
@@ -50,7 +50,7 @@
     "jira-md-sync": "^0.1.0",
     "jira2md": "^3.0.1",
     "lucide-react": "^0.553.0",
-    "next": "^16.0.8",
+    "next": "^15.5.7",
     "next-auth": "^5.0.0-beta.30",
     "react": "^19.2.1",
     "react-diff-viewer-continued": "^3.4.0",
