--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@prisma/client": "^6.16.2",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@supabase/supabase-js": "^2.81.1",
     "@tanstack/react-query": "^5.87.1",
     "@types/bcrypt": "^6.0.0",
@@ -45,6 +48,7 @@
     "assistant-ui": "^0.0.58",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
+    "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
     "jira-client": "^8.2.2",
     "jira-md-sync": "^0.1.0",
@@ -59,12 +63,14 @@
     "rehype-raw": "^7.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
+    "tailwind-merge": "^3.4.0",
     "trello-md-sync": "^0.1.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@next/bundle-analyzer": "^15.5.6",
+    "@playwright/test": "^1.57.0",
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/addon-interactions": "^8.6.14",
     "@storybook/addon-links": "^8.6.14",
